--- a/board/src/main/resources/templates/boardmodify.html
+++ b/board/src/main/resources/templates/boardmodify.html
@@ -23,7 +23,7 @@
 </style>
 <body>
 <div class="layout">
-  <form th:action="@{/board/update{id}(id=${board.id})}" method="post">
+  <form th:action="@{/board/update/{id}(id=${board.id})}" method="post">
 
     <input name ="title" type="text" th:value="${board.title}">
     <textarea name ="content" th:text="${board.content}"></textarea>
