--- a/board/src/main/resources/templates/boardview.html
+++ b/board/src/main/resources/templates/boardview.html
@@ -8,6 +8,6 @@
     <h1 th:text="${board.title}"></h1>
     <p th:text="${board.content}">내용</p>
     <a th:href="@{/board/delete(id=${board.id})}">삭제</a>
-    <a th:href="@{/board/modify{id}(id=${board.id})}">수정</a>
+    <a th:href="@{/board/modify/{id}(id=${board.id})}">수정</a>
 </body>
 </html>
