--- a/board/src/main/resources/templates/boardmodify.html
+++ b/board/src/main/resources/templates/boardmodify.html
@@ -23,10 +23,11 @@
 </style>
 <body>
 <div class="layout">
-  <form th:action="@{/board/update/{id}(id=${board.id})}" method="post">
+  <form th:action="@{/board/update/{id}(id=${board.id})}" method="post" enctype="multipart/form-data">
 
     <input name ="title" type="text" th:value="${board.title}">
     <textarea name ="content" th:text="${board.content}"></textarea>
+    <input type="file" name="file">
     <button type="submit">수정</button>
   </form>
 </div>
