--- a/board/src/main/resources/templates/boardview.html
+++ b/board/src/main/resources/templates/boardview.html
@@ -7,6 +7,7 @@
 <body>
     <h1 th:text="${board.title}"></h1>
     <p th:text="${board.content}">내용</p>
+    <a th:href="@{${board.filepath}}">download</a>
     <a th:href="@{/board/delete(id=${board.id})}">삭제</a>
     <a th:href="@{/board/modify/{id}(id=${board.id})}">수정</a>
 </body>
