--- a/board2/src/main/resources/templates/view.html
+++ b/board2/src/main/resources/templates/view.html
@@ -41,7 +41,30 @@
 <button onclick="listReq()">목록</button>
 <button onclick="updateReq()">수정</button>
 <button onclick="deleteReq()">삭제</button>
+<!-- 댓글 작성 부분 -->
+<div id="comment-write">
+  <input type="text" id="commentWriter" placeholder="작성자">
+  <input type="text" id="commentContents" placeholder="내용">
+  <button id="comment-write-btn" onclick="commentWrite()">댓글작성</button>
+</div>
 
+<!-- 댓글 출력 부분 -->
+<div id="comment-list">
+  <table>
+    <tr>
+      <th>댓글번호</th>
+      <th>작성자</th>
+      <th>내용</th>
+      <th>작성시간</th>
+    </tr>
+    <tr th:each="comment: ${commentList}">
+      <td th:text="${comment.id}"></td>
+      <td th:text="${comment.commentWriter}"></td>
+      <td th:text="${comment.commentContents}"></td>
+      <td th:text="${comment.commentCreatedTime}"></td>
+    </tr>
+  </table>
+</div>
 
 
 </body>
