--- a/main/src/main/resources/templates/index.html
+++ b/main/src/main/resources/templates/index.html
@@ -12,14 +12,14 @@
 
     <a href="/board/">단어장</a>
 </div>
-<form th:if="${session.loginId==null}" action="/member/login" method="post">
-  <input name="userId" value="아이디">
-  <input name ="password" type="password" value="비밀번호">
-  <input type="submit" value="로그인">
+<div th:if="${session.loginId==null}">
+    <form action="/member/login" method="post">
+      <input name="userId" value="아이디">
+      <input name ="password" type="password" value="비밀번호">
+      <input type="submit" value="로그인">
+    </form>
     <button onclick="newMember()">회원가입</button>
-</form>
-
-
+</div>
 </body>
 <script>
   //  function saveReq() {
