--- a/main/src/main/resources/templates/index.html
+++ b/main/src/main/resources/templates/index.html
@@ -9,7 +9,7 @@
     <p th:text="${session.loginId + '의 단어장'}"></p>
     <a href="/member/update">내 정보 수정하기</a>
     <a href="/member/logout">로그아웃</a>
-
+    <a  href="member/"></a>
     <a href="/board/">단어장</a>
 </div>
 <div th:if="${session.loginId==null}">
