--- a/main/src/main/resources/templates/boardView.html
+++ b/main/src/main/resources/templates/boardView.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <title>detail</title>
-
+    <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
 </head>
 <body>
 <table>
@@ -25,5 +25,56 @@
 <button onclick="listReq()">목록</button>
 <button onclick="updateReq()">수정</button>
 <button onclick="deleteReq()">삭제</button>
+<div id="comment-write">
+    <input type="hidden" th:value="${board.id}">
+    <input type="text" id="content" placeholder="내용">
+    <button id="comment-write-btn" onclick="commentWrite()">댓글작성</button>
+</div>
+<div id="comment-list">
+<table>
+    <tr>
+        <th>댓글번호</th>
+
+        <th>내용</th>
+    </tr>
+    <tr th:each="comment: ${commentList}">
+        <td th:text="${comment.id}"></td>
+
+        <td th:text="${comment.comment}"></td>
+
+    </tr>
+</table>
+</div>
+
 </body>
+    <script th:inline="javascript">
+        const commentWrite = () => {
+            const contents = document.getElementById("content").value;
+            const id = [[${board.id}]];
+            const memberId=[[${board.memberId}]];
+            $.ajax({
+                // 요청방식: post, 요청주소: /comment/save, 요청데이터: 작성자, 작성내용, 게시글번호
+                type: "post",
+                url: "/comment/save",
+                data: {
+                    "content": contents,
+                    "boardId": id,
+                    "memberId":memberId
+                }
+
+            });
+
+        }
+        const updateReq = () => {
+            console.log("수정 요청");
+            const id = [[${board.id}]];
+            location.href = "/board/update/" + id;
+        }
+        const deleteReq = () => {
+            console.log("삭제 요청");
+            const id = [[${board.id}]];
+            location.href = "/board/delete/" + id;
+        }
+    </script>
+
 </html>
